--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "@angular/router": "~11.2.8",
     "ngx-cookie-service": "^11.0.2",
     "rxjs": "~6.6.7",
+    "sweetalert2": "^11.0.18",
+    "trm-api": "^1.4.7",
+    "trmcol": "^2.0.2",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
   },
