--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build:prod": "ng build --target production --build-optimizer --vendor-chunk",
     "test": "ng test --code-coverage --watch=false",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "sonar": "sonar-scanner"
   },
   "private": true,
   "dependencies": {
@@ -51,6 +52,7 @@
     "karma-junit-reporter": "^2.0.1",
     "protractor": "~7.0.0",
     "protractor-beautiful-reporter": "^1.3.6",
+    "sonar-scanner": "^3.1.0",
     "ts-node": "~9.1.1",
     "tslint": "~6.1.0",
     "typescript": "~4.1.5"
