--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,7 @@
 # Credentials
-sonar.host.url=http://localhost:9000
-sonar.login=admin
-sonar.password=12345
+# sonar.host.url=http://localhost:9000
+# sonar.login=admin
+# sonar.password=12345
 
 # Required metadata.
 sonar.projectKey=co.com.ceiba.adn:agendamiento-mikecardona
@@ -9,7 +9,7 @@ sonar.projectName=CeibaADN-Agendamiento(mike.cardona)
 sonar.projectVersion=1.0.0
 
 # Path to the parent source code directory.
-sonar.sources=src
+sonar.sources=src/app
 
 
 # Language.
@@ -22,9 +22,9 @@ sonar.sourceEncoding=UTF-8
 # that you don't want to analyse.
 # As an example, I'm excluding the 
 # Providers directory.
-sonar.exclusions=node_modules/*
+sonar.exclusions=**/node_modules/**,**/*.module.ts,**/*.directive.ts,**/interceptor/*.ts,**/*.html,**/*.css
 
-sonar.tests=src
+sonar.tests=src/app
 sonar.test.inclusions=**/*.spec.ts
 sonar.typescript.lcov.reportPaths=reports/coverage/app-base/lcov.info
 
