--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -10,7 +10,7 @@ sonar.projectVersion=1.0.0
 sonar.sources=src/app
 sonar.language=angular
 sonar.sourceEncoding=UTF-8
-sonar.exclusions=**/node_modules/**,**/*.module.ts,**/*.directive.ts,**/interceptor/*.ts,**/*.html,**/*.css
+sonar.exclusions=**/node_modules/**,**/*.module.ts,**/*.directive.ts,**/interceptor/*.ts,**/*.html,**/*.css,polyfills.ts
 sonar.tests=src/app
 sonar.test.inclusions=**/*.spec.ts
 sonar.typescript.lcov.reportPaths=reports/coverage/app-base/lcov.info
