--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -13,7 +13,13 @@
       ],
       "@shared/*": [
         "src/app/shared/*"
-      ]
+      ],
+      "@schedule/*": [
+        "src/app/feature/schedule/*"
+      ],
+      "@login/*": [
+        "src/app/feature/login/*"
+      ],
     }
   },
   "files": [
