--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,6 +30,9 @@
       "@schedule/*": [
         "src/app/feature/schedule/*"
       ],
+      "@login/*": [
+        "src/app/feature/login/*"
+      ],
       "@shared/*": [
         "src/app/shared/*"
       ]
